# intel-telemetry-tool

./: .gitignore  README.md
tool/: CMakeLists.txt  telemetry.cpp
